# celestial-calendar

./: .clang-tidy  .gitattributes  .gitignore  .ruff.toml  AGENTS.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  Requirements.txt  artifact_downloader.py  automation.py  build.py  checker.py  linter.py  project.py
.github/: copilot-instructions.md
.github/workflows/: build_and_test.yml  claude-review.yml  claude.yml  core_tests.yml  docker_build.yml  docker_linux_build.yml  macos_build.yml  release.yml  run_test.yml
.github/workflows/shared_lib_build/: docker_build.yml  macos_build.yml
astro/: astro.hpp  delta_t.hpp  earth.hpp  earth_vsop87d.hpp  julian_day.hpp  math.hpp  sun.hpp  toolbox.hpp
astro/vsop87d/: defines.hpp  earth_coeff.hpp  vsop87d.hpp
automation/: __init__.py  build.py  download.py  env.py  environment.py  github.py  gtest.py  linter.py  paths.py  project.py  sysinfo.py  test.py  utils.py
calendar/: converter.hpp  datetime.hpp  delta_t.hpp  dynamical_time.hpp  jieqi.hpp  julian_day.hpp  lunar.hpp  lunardata.hpp
common/: defines.hpp  lunardata.hpp
docs/: CHANGELOG.md  RELEASE_NOTES.md
python_bindings/: CMakeLists.txt  lib_delta_t.cpp
shared_lib/: CMakeLists.txt  lib.cpp  lib.hpp  lib_astro.cpp  lib_delta_t.cpp  lib_jieqi.cpp
src/: CMakeLists.txt  something.hpp
src/astro/: astro.hpp  coord_transform.hpp  delta_t.hpp  earth.hpp  elp2000_82b.hpp  julian_day.hpp  moon.hpp  moon_phase.hpp  sidereal_time.hpp  sun.hpp  syzygy.hpp  toolbox.hpp
src/astro/vsop87d/: defines.hpp  earth_coeff.hpp
src/calendar/: datetime.hpp  jieqi.hpp  lunar.hpp  lunardata.hpp
src/calendar/lunar/: algo1.hpp  algo2.hpp  algo3.hpp  common.hpp  converter.hpp  lunardata.hpp
src/cpp/astro/: astro.hpp  delta_t.hpp  earth.hpp  toolbox.hpp
src/cpp/shared_lib/: lib.hpp  lib_delta_t.cpp  lib_jieqi.cpp
src/cpp/test/: datetime_test.cpp  jieqi_test.cpp
src/cpp/test/astro/: earth_test.cpp  julian_day_test.cpp  toolbox_test.cpp  vsop87d_test.cpp
src/python_bindings/: setup.py
src/shared_lib/: CMakeLists.txt  lib.cpp  lib.hpp  lib_astro.cpp  lib_delta_t.cpp  lib_jieqi.cpp  lib_lunar.cpp
src/test/: CMakeLists.txt  datetime_test.cpp  jieqi_test.cpp  lunar_test.cpp  lunardata_test.cpp  util_test.cpp
src/test/astro/: coord_transform_test.cpp  delta_t_test.cpp  delta_t_test_helper.hpp  earth_test.cpp  elp2000_82b_test.cpp  julian_day_test.cpp  moon_phase_test.cpp  moon_test.cpp  sidereal_time_test.cpp  sun_test.cpp  sygyzy_test.cpp  toolbox_test.cpp  vsop87d_test.cpp
src/test/lunar/: algo1_test.cpp  algo2_test.cpp  algo3_test.cpp  converter_test.cpp  diff_test.cpp  lunardata_test.cpp
src/util/: cache.hpp  hash.hpp  random.hpp  util.hpp  ymd.hpp
statistics/: common.py  conjunction_syzygy.ipynb  delta_t.ipynb  hko_jieqi.ipynb  lunar_calendar.ipynb  moon_longitude.ipynb  moon_phase_crawler.py  moon_phases.csv  moon_syzygy.ipynb  new_moon.ipynb  new_moon_moments.csv  sun_longitude.ipynb  syzygy.ipynb  usno_data.txt
statistics/delta_t/: analysis.ipynb  common.py  usno_data.txt
statistics/hko_data/: 2058.txt
test/: CMakeLists.txt  converter_test.cpp  datetime_test.cpp  delta_t_test.cpp  delta_t_test_helper.hpp  dynamical_time_test.cpp  jieqi_test.cpp  julian_day_test.cpp  lunar_test.cpp  lunardata_test.cpp  something_test.cpp  sun_test.cpp  util_test.cpp
test/astro/: delta_t_test.cpp  delta_t_test_helper.hpp  earth_test.cpp  julian_day_test.cpp  math_test.cpp  sun_test.cpp  toolbox_test.cpp  vsop87d_test.cpp
toolbox/: artifact_downloader.py  build_info.py  compiler_finder.py  latest_build_downloader.py  release_downloader.py  shared_lib.py
util/: date.hpp  datetime.hpp  formatter.hpp  math.hpp  random.hpp  util.hpp  ymd.hpp
